# liars_table

./: .liars_table_state.json  Cargo.toml  README.md  README_EN.md  config.toml  liars_config.md  liars_table.code-workspace
doc/: concept.md  history.md  system.md  v0.0.1_plan.md  v0.1_plan.md  v0.3_plan.md
languages/: en.toml  ja.toml
src/: card.rs  config.rs  game.rs  i18n.rs  interactive.rs  main.rs  main_new.rs  player.rs  roulette.rs  roulette_old.rs
