[package]
name = "liars_table"
version = "0.2.0"
edition = "2021"

[dependencies]
# 既存
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 新規追加（Phase 2対応）
dialoguer = "0.11" # 対話式UI
toml = "0.9"       # TOML設定ファイル
dirs = "6.0"       # 設定ディレクトリ管理
thiserror = "2.0"  # エラーハンドリング
