[package]
name = "liars_table"
version = "0.3.0"
edition = "2024"

[dependencies]
# コア機能
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# UI・設定管理
dialoguer = "0.11" # 対話式UI
toml = "0.8"       # TOML設定ファイル
dirs = "5.0"       # 設定ディレクトリ管理
thiserror = "1.0"  # エラーハンドリング

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
